[package]
name = "macnickenson"
version = "0.1.0"
authors = ["Stefan Schwarz <stefan@f2o.io>"]
edition = "2018"

[dependencies]
anyhow = "1.0"
argh = "0.1"
askama_tide = "0.10"
askama = { version = "0.10", features = ["with-tide"]}
async-sqlx-session = "0.2"
async-std = { version = "1.6", features = ["attributes"] }
chrono = "0.4"
http-types = "2.4"
openssl = { version = "0.10.30", features = ["vendored"] }
serde = "1.0"
sqlx = { version = "0.4.0-beta.1", features = ["mysql", "chrono"] }
tide = "0.13"

[patch.crates-io]
askama_tide = { git = "https://github.com/jbr/askama", branch = "update-tide-to-0.13" }
askama = { git = "https://github.com/jbr/askama", branch = "update-tide-to-0.13" }
