[package]
name = "mac4nick"
version = "0.1.0"
authors = ["Stefan Schwarz <stefan@f2o.io>"]
edition = "2024"

[dependencies]
anyhow = "1.0"
argh = "0.1"
askama = { version = "0.13" }
axum-messages = "0.8"
axum = { version = "0.8", features = ["macros"] }
chrono = "0.4"
http = "1"
openssl-probe = "0.1.4"
openssl = { version = "0.10", features = ["vendored"] }
reqwest = { version = "0.12", features = ["json", "cookies"] }
serde = "1.0"
sqlx = { version = "0.8", features = ["mysql", "chrono", "runtime-tokio"] }
tokio = { version = "1.11", features = ["full"] }
tower-http = { version = "0.6", features = ["fs", "trace"] }
tower-sessions = "0.14"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
